--- a/index.html
+++ b/index.html
@@ -1,37 +1,323 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Ice Forge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ice-Forge</title>
+  <meta name="description" content="Ice-Forge: open-source foundation projects for modern data-centric services." />
+  <meta name="theme-color" content="#0B3C5D" />
   <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0b1220;
-      color: #e6edf3;
-      margin: 0;
-      padding: 4rem;
+    :root{
+      --bg:#0b1220; --panel:#0f1a2f; --text:#e8eef7; --muted:#9fb2cc; --line:rgba(255,255,255,.10);
+      --brand:#3ab0ff; --brand2:#6ee7f9; --accent:#f59e0b;
+      --shadow: 0 18px 40px rgba(0,0,0,.35);
+      --radius: 18px;
+      --max: 1120px;
+      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;
+      --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
     }
-    h1 { font-size: 3rem; }
-    a { color: #6cb6ff; text-decoration: none; }
-    .box {
-      max-width: 800px;
-      margin: auto;
+    :root[data-theme="light"]{
+      --bg:#f7fafc; --panel:#ffffff; --text:#0b1220; --muted:#54657d; --line:rgba(2,6,23,.10);
+      --shadow: 0 18px 40px rgba(2,6,23,.10);
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:var(--sans);
+      background: radial-gradient(900px 500px at 15% 10%, rgba(58,176,255,.18), transparent 60%),
+                  radial-gradient(900px 500px at 85% 15%, rgba(110,231,249,.12), transparent 62%),
+                  radial-gradient(900px 500px at 70% 85%, rgba(245,158,11,.08), transparent 60%),
+                  var(--bg);
+      color:var(--text);
+      line-height:1.5;
+    }
+    a{color:inherit; text-decoration:none}
+    .wrap{max-width:var(--max); margin:0 auto; padding:28px 20px 64px}
+    header{
+      display:flex; align-items:center; justify-content:space-between;
+      gap:18px; padding:10px 0 26px;
+    }
+    .brand{
+      display:flex; align-items:center; gap:12px;
+      font-weight:700; letter-spacing:.2px;
+    }
+    .brand small{display:block; font-weight:500; color:var(--muted); letter-spacing:0}
+    .nav{
+      display:flex; gap:14px; align-items:center; flex-wrap:wrap;
+      color:var(--muted);
+    }
+    .nav a{padding:10px 12px; border-radius:12px}
+    .nav a:hover{background:rgba(58,176,255,.10); color:var(--text)}
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      gap:10px; padding:10px 14px; border-radius:12px;
+      border:1px solid var(--line);
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+      box-shadow:none;
+      cursor:pointer;
+      color:var(--text);
+    }
+    :root[data-theme="light"] .btn{
+      background:linear-gradient(180deg, rgba(2,6,23,.04), rgba(2,6,23,.02));
+    }
+    .btn:hover{border-color:rgba(58,176,255,.35)}
+    .hero{
+      display:grid; grid-template-columns: 1.2fr .8fr; gap:18px;
+      align-items:stretch;
+      margin-top:10px;
+    }
+    @media (max-width: 900px){
+      .hero{grid-template-columns:1fr; }
+    }
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));
+      border:1px solid var(--line);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:22px;
+      overflow:hidden;
+      position:relative;
+    }
+    :root[data-theme="light"] .card{
+      background:linear-gradient(180deg, rgba(2,6,23,.03), rgba(2,6,23,.01));
+    }
+    .h-eyebrow{
+      display:inline-flex; gap:10px; align-items:center;
+      padding:6px 10px; border:1px solid var(--line); border-radius:999px;
+      color:var(--muted);
+      font-family:var(--mono); font-size:12px;
+    }
+    h1{margin:14px 0 10px; font-size:44px; line-height:1.08; letter-spacing:-.6px}
+    @media (max-width: 520px){ h1{font-size:36px} }
+    .lead{color:var(--muted); font-size:16px; max-width:60ch}
+    .cta{display:flex; gap:10px; margin-top:18px; flex-wrap:wrap}
+    .cta .primary{
+      border-color:rgba(58,176,255,.45);
+      background:linear-gradient(180deg, rgba(58,176,255,.18), rgba(58,176,255,.08));
+    }
+    .cta .primary:hover{border-color:rgba(58,176,255,.80)}
+    .grid{
+      display:grid; grid-template-columns:repeat(3,1fr); gap:14px;
+      margin-top:14px;
+    }
+    @media (max-width: 980px){ .grid{grid-template-columns:1fr 1fr} }
+    @media (max-width: 640px){ .grid{grid-template-columns:1fr} }
+    .tile{
+      padding:16px; border-radius:16px; border:1px solid var(--line);
+      background:rgba(0,0,0,.05);
+    }
+    :root[data-theme="light"] .tile{ background:rgba(2,6,23,.02); }
+    .tile h3{margin:0 0 6px; font-size:16px}
+    .tile p{margin:0; color:var(--muted); font-size:14px}
+    .mono{font-family:var(--mono)}
+    .kpi{
+      display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-top:12px;
+    }
+    .kpi .tile{padding:14px}
+    .kpi strong{display:block; font-size:18px}
+    .kpi span{color:var(--muted); font-size:12px}
+    footer{
+      margin-top:28px; color:var(--muted);
+      display:flex; gap:10px; justify-content:space-between; align-items:center; flex-wrap:wrap;
+      border-top:1px solid var(--line); padding-top:16px;
+    }
+    .svgmark{width:34px; height:34px}
+    .hero-art{
+      position:absolute; inset:-60px -80px auto auto;
+      width:380px; opacity:.18; pointer-events:none;
+      transform:rotate(6deg);
+      filter:blur(.0px);
+    }
+    .codeflow{
+      font-family:var(--mono);
+      color:rgba(110,231,249,.75);
+      font-size:12px;
+      white-space:nowrap;
+      overflow:hidden;
+      border-top:1px dashed rgba(110,231,249,.25);
+      padding-top:10px;
+      margin-top:14px;
+    }
+    .codeflow span{display:inline-block; animation:marquee 18s linear infinite;}
+    @keyframes marquee{
+      from{ transform:translateX(0); }
+      to{ transform:translateX(-50%); }
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>Ice Forge</h1>
-    <p>
-      Ice Forge builds open-source infrastructure tools focused on
-      scalability, performance, and enterprise-grade reliability.
-    </p>
-    <p>
-      <strong>Projects</strong><br/>
-      • <a href="https://github.com/ice-forge/skadi">Skadi</a> — distributed JDBC result caching backed by object storage
-    </p>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <!-- ICE-FORGE mark (clean, geometric) -->
+        <svg class="svgmark" viewBox="0 0 64 64" aria-hidden="true">
+          <defs>
+            <linearGradient id="iceg" x1="0" y1="0" x2="0" y2="1">
+              <stop offset="0" stop-color="#6EE7F9"/>
+              <stop offset="1" stop-color="#3AB0FF"/>
+            </linearGradient>
+          </defs>
+          <path d="M14 20h36v10c0 6-5 10-10 10H24c-5 0-10-4-10-10V20z" fill="url(#iceg)" opacity=".9"/>
+          <path d="M20 44h24l4 8H16l4-8z" fill="#0B3C5D" opacity=".85"/>
+          <path d="M24 12h16l-2 6H26l-2-6z" fill="#0B3C5D" opacity=".85"/>
+          <circle cx="50" cy="16" r="2" fill="#F59E0B" opacity=".9"/>
+        </svg>
+        <div>
+          <div>ICE-FORGE</div>
+          <small>Open-source foundations for data-centric services</small>
+        </div>
+      </div>
+
+      <nav class="nav">
+        <a href="./skadi/">Skadi</a>
+        <a href="#projects">Projects</a>
+        <a href="#principles">Principles</a>
+        <button class="btn" id="themeBtn" type="button" aria-label="Toggle theme">
+          <span class="mono">theme</span>
+          <span aria-hidden="true">◐</span>
+        </button>
+      </nav>
+    </header>
+
+    <section class="hero">
+      <div class="card">
+        <div class="h-eyebrow">
+          <span>ice-forge.org</span>
+          <span>•</span>
+          <span class="mono">v0</span>
+        </div>
+
+        <h1>Forge clean, composable infrastructure—<br/>in the open.</h1>
+        <p class="lead">
+          Ice-Forge hosts focused backend building blocks: practical services, reference implementations,
+          and patterns that stay production-grade without getting heavy.
+        </p>
+
+        <div class="cta">
+          <a class="btn primary" href="./skadi/">Explore Skadi →</a>
+          <a class="btn" href="#projects">See projects</a>
+          <a class="btn" href="#principles">How we build</a>
+        </div>
+
+        <div class="codeflow" aria-hidden="true">
+          <span>01010 11001 01010 00101 01010 11001 01010 00101 01010 11001 01010 00101 01010 11001 01010 00101 </span>
+          <span>01010 11001 01010 00101 01010 11001 01010 00101 01010 11001 01010 00101 01010 11001 01010 00101 </span>
+        </div>
+
+        <!-- subtle background art -->
+        <svg class="hero-art" viewBox="0 0 600 320" aria-hidden="true">
+          <path d="M60 250 L200 80 L300 180 L420 40 L540 250" fill="none" stroke="#6EE7F9" stroke-width="6" opacity=".35"/>
+          <path d="M60 250 L200 80 L540 250 Z" fill="#3AB0FF" opacity=".08"/>
+          <path d="M420 40 L420 10" stroke="#F59E0B" stroke-width="6" opacity=".35"/>
+          <polygon points="420,0 432,16 408,16" fill="#F59E0B" opacity=".35"/>
+        </svg>
+      </div>
+
+      <div class="card">
+        <h2 style="margin:0 0 8px; font-size:18px;">At a glance</h2>
+        <p style="margin:0 0 12px; color:var(--muted); font-size:14px;">
+          Small surface area. Clear boundaries. Easy to extend.
+        </p>
+
+        <div class="kpi">
+          <div class="tile">
+            <strong class="mono">Java / Spring</strong>
+            <span>Production-ready defaults</span>
+          </div>
+          <div class="tile">
+            <strong class="mono">AWS-friendly</strong>
+            <span>S3-first patterns</span>
+          </div>
+          <div class="tile">
+            <strong class="mono">Composable</strong>
+            <span>Pluggable integration points</span>
+          </div>
+          <div class="tile">
+            <strong class="mono">Observable</strong>
+            <span>Actuator / metrics ready</span>
+          </div>
+        </div>
+
+        <div style="margin-top:14px" class="tile">
+          <h3 style="margin:0 0 6px;">Featured: Skadi</h3>
+          <p style="margin:0; color:var(--muted); font-size:14px;">
+            A clean Spring Boot backend foundation for data-centric services—built for extensibility and real workloads.
+          </p>
+          <div style="margin-top:12px;">
+            <a class="btn" href="./skadi/">Open Skadi page →</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="card" style="margin-top:14px;">
+      <h2 style="margin:0 0 10px;">Projects</h2>
+      <div class="grid">
+        <a class="tile" href="./skadi/">
+          <h3>Skadi</h3>
+          <p>Spring Boot backend foundation for data-centric services & APIs.</p>
+          <p class="mono" style="margin-top:8px; opacity:.9;">/skadi/</p>
+        </a>
+        <div class="tile">
+          <h3>More coming</h3>
+          <p>Keep Ice-Forge small and sharp—add projects only when they solve real problems.</p>
+          <p class="mono" style="margin-top:8px; opacity:.9;">roadmap</p>
+        </div>
+        <div class="tile">
+          <h3>Design system</h3>
+          <p>Shared brand kit: logos, colors, and layout rules for docs & sites.</p>
+          <p class="mono" style="margin-top:8px; opacity:.9;">brand/</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="principles" class="card" style="margin-top:14px;">
+      <h2 style="margin:0 0 10px;">Principles</h2>
+      <div class="grid">
+        <div class="tile">
+          <h3>Clean boundaries</h3>
+          <p>Domain stays technology-agnostic; infrastructure is replaceable.</p>
+        </div>
+        <div class="tile">
+          <h3>Pluggability</h3>
+          <p>Corporate clients can supply auth/security/connectors without forking.</p>
+        </div>
+        <div class="tile">
+          <h3>Production posture</h3>
+          <p>Observability, testability, sane defaults—out of the box.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div>© <span id="year"></span> Ice-Forge</div>
+      <div class="mono">Built for GitHub Pages</div>
+    </footer>
   </div>
+
+  <script>
+    (function(){
+      const root = document.documentElement;
+      const key = "iceforge_theme";
+      const btn = document.getElementById("themeBtn");
+      const year = document.getElementById("year");
+      year.textContent = new Date().getFullYear();
+
+      function setTheme(t){
+        root.setAttribute("data-theme", t);
+        localStorage.setItem(key, t);
+      }
+      function getPreferred(){
+        const saved = localStorage.getItem(key);
+        if(saved) return saved;
+        return window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches ? "light" : "dark";
+      }
+      setTheme(getPreferred());
+
+      btn.addEventListener("click", () => {
+        const current = root.getAttribute("data-theme") || "dark";
+        setTheme(current === "dark" ? "light" : "dark");
+      });
+    })();
+  </script>
 </body>
 </html>
-
